--- a/src/components/pagina.html
+++ b/src/components/pagina.html
@@ -38,7 +38,7 @@
         <div class="medic-content container">
 
             <h2>¿Qué es MediWeb?</h2>
-            <p class="txt-p">es una plataforma innovadora diseñada para facilitar el proceso de agendar citas médicas de manera rápida, sencilla y segura. Nuestra misión es conectar a pacientes con profesionales de la salud, brindando acceso a una amplia red de médicos y especialistas desde la comodidad de tu hogar.</p>
+            <p class="txt-p">Es una plataforma innovadora diseñada para facilitar el proceso de agendar citas médicas de manera rápida, sencilla y segura. Nuestra misión es conectar a pacientes con profesionales de la salud, brindando acceso a una amplia red de médicos y especialistas desde la comodidad de tu hogar.</p>
 
             <div class="medic-group">
                 <div class="medic-1">
@@ -71,26 +71,24 @@
 
     <main class="services">
         <div class="services-content container">
-            <h2>Cafetería servicios</h2>
+            <h2>Conoce los beneficios</h2>
     
             <div class="services-group">
                 <div class="services-1">
-                    <img src="../images/i1.svg" alt="">
+                    <img src="../images/calendar-icon.png" alt="">
                     <h3>Servicio 1</h3>
                 </div>
                 <div class="services-1">
-                    <img src="../images/i2.svg" alt="">
+                    <img src="../images/medical-leave.png" alt="">
                     <h3>Servicio 2</h3>
                 </div>
                 <div class="services-1">
-                    <img src="../images/i3.svg" alt="">
+                    <img src="../images/checked-icon.png" alt="">
                     <h3>Servicio 3</h3>
                 </div>
             </div>
     
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dolore maiores facere, voluptates
-                voluptatum, perspiciatis error unde, quae quod commodi dicta non earum! Ratione, quam ut vitae rem
-                ducimus omnis?</p>
+            <p>Nuestra plataforma de agendamiento en línea está diseñada para ofrecerte comodidad y eficiencia. Puedes programar, reprogramar o cancelar tus citas médicas de manera rápida y sencilla desde cualquier lugar y en cualquier momento. Olvídate de las llamadas telefónicas y disfruta de una experiencia libre de estrés.</p>
             <a href="#" class="btn-1">Información</a>
         </div>
     </main>
