--- a/src/components/IndexWeb2.html
+++ b/src/components/IndexWeb2.html
@@ -18,7 +18,7 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="IndexWeb.html">Inicio</a></li>
                     <li><a href="IndexWeb2.html">¿Quiénes somos?</a></li>
                     <li><a href="#">Servicios</a></li>
                     <li><a href="Login.js">Registrate!</a></li>
@@ -55,7 +55,7 @@
     
                 <div class="blog-item">
                     <img src="../images/doctor3.avif" alt="">
-                    <h3>Blog 3</h3>
+                    <h3>Dr. Wilson</h3>
                     <p>m ipsum dolor, sit amet </p>
                 </div>
             </div>
@@ -106,9 +106,9 @@
                     <li><a href="#">Email: info@mediweb.com</a></li>
                     <li><a href="#">Dirección: Calle Salud 123, Ciudad</a></li>
                     <li><a href="#">Síguenos en Redes Sociales</a></li>
-                    <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                    <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-                    <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="../images/facebook_logo.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="../images/x_logo.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="../images/instagram_logo.png" alt="Instagram"></a></li>
                 </ul>
             </div>
         </div>
